--- a/templates/dashboad.html
+++ b/templates/dashboad.html
@@ -240,41 +240,27 @@
                                                                     <h4 class="modal-title">Email Template</h4>
                                                                 </div>
                                                                 <div class="modal-body">
-                                                                    <form class="form-horizontal">
+                                                                    <form class="form-horizontal" action="{{ url_for('users.dashboard') }}">
                                                                         <div class="form-group">
-                                                                            <label class="col-lg-2 control-label">To</label>
-                                                                            <div class="col-lg-10">
-                                                                                <input type="text" placeholder="" id="inputEmail1" class="form-control">
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="form-group">
-                                                                            <label class="col-lg-2 control-label">Cc / Bcc</label>
-                                                                            <div class="col-lg-10">
-                                                                                <input type="text" placeholder="" id="cc" class="form-control">
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="form-group">
-                                                                            <label class="col-lg-2 control-label">Subject</label>
+                                                                            <label class="col-lg-2 control-label">Header</label>
                                                                             <div class="col-lg-10">
                                                                                 <input type="text" placeholder="" id="inputPassword1" class="form-control">
                                                                             </div>
                                                                         </div>
                                                                         <div class="form-group">
-                                                                            <label class="col-lg-2 control-label">Message</label>
+                                                                            <label class="col-lg-2 control-label">Body</label>
                                                                             <div class="col-lg-10">
                                                                                 <textarea rows="10" cols="30" class="form-control" id="texarea1" name="texarea"></textarea>
                                                                             </div>
                                                                         </div>
-
                                                                         <div class="form-group">
-                                                                            <div class="col-lg-offset-2 col-lg-10">
-                                                                                <span class="btn green fileinput-button"><i class="fa fa-plus fa fa-white"></i>
-																	<span>Attachment</span>
-                                                                                <input type="file" name="files[]" multiple="">
-                                                                                </span>
-                                                                                <button class="btn btn-primary" type="submit">Send</button>
+                                                                            <label class="col-lg-2 control-label">Footer</label>
+                                                                            <div class="col-lg-10">
+                                                                                <input type="text" placeholder="" id="inputPassword1" class="form-control">
                                                                             </div>
                                                                         </div>
+
+                                                                        
                                                                     </form>
                                                                 </div>
                                                             </div>
