--- a/templates/users.html
+++ b/templates/users.html
@@ -33,18 +33,18 @@
                                                     <table class="table table-inbox table-hover table-responsive">
                                                         <tr class="unread">
                                                            
-                                                            <th class="view-message  dont-show">Header</th>
-                                                            <th class="view-message">Body</th>
-                                                            <th class="view-message  dont-show">Footer</th>
+                                                            <th class="view-message  dont-show">Name</th>
+                                                            <th class="view-message">Email</th>
+                                                            <th class="view-message  dont-show">Amount</th>
                                                             <th class="view-message  dont-show">Action</th>
                                                         </th>
                                                         <tbody>
-                                                            {% for email_template in email_templates %}
+                                                            {% for user in users %}
                                                             <tr class="unread">
                                                               
-                                                                <td class="view-message  dont-show">{{ email_template.header }}</td>
-                                                                <td class="view-message">{{ email_template.body }}</td>
-                                                                <td class="view-message  dont-show">{{ email_template.footer }}</td>
+                                                                <td class="view-message  dont-show">{{ user.username }}</td>
+                                                                <td class="view-message">{{ user.email }}</td>
+                                                                <td class="view-message  dont-show">{{ user.amount }}</td>
                                                                 <td class="view-message  dont-show">View</td>
                                                             </tr> 
                                                             {% endfor %}
