--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -41,12 +41,17 @@
                                                         <tbody>
                                                             {% for email_template in email_templates %}
                                                             <tr class="unread">
-                                                              
-                                                                <td class="view-message  dont-show">{{ email_template.header }}</td>
+                                                                <td class="view-message dont-show">{{ email_template.header }}</td>
                                                                 <td class="view-message">{{ email_template.body }}</td>
-                                                                <td class="view-message  dont-show">{{ email_template.footer }}</td>
-                                                                <td class="view-message  dont-show">View</td>
-                                                            </tr> 
+                                                                <td class="view-message dont-show">{{ email_template.footer }}</td>
+                                                                <td class="view-message dont-show">
+                                                                    <form action="{{ url_for('users.generate_email_body') }}" method="post">
+                                                                        {{ tempform.hidden_tag() }}
+                                                                        <input type="hidden" name="template_id" value="{{ email_template.id }}">
+                                                                        <button type="submit" class="btn btn-success">Generate Email</button>
+                                                                    </form>
+                                                                </td>
+                                                            </tr>
                                                             {% endfor %}
                                                         </tbody>
                                                     </table>
