--- a/templates/register.html
+++ b/templates/register.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="login-form">
                             <h4>Register</h4>
-                            <form method="POST">
+                            <form action="{{url_for('auth.register')}}" method="POST">
                                 {{ form.hidden_tag() }}
                                 <div class="form-group">
                                     {{ form.username.label(class="form-label") }}
@@ -56,22 +56,14 @@
                                     <span class="text-danger">{{ error }}</span>
                                     {% endfor %}
                                 </div>
-                                <div class="form-group">
-                                    {{ form.password.label(class="form-label") }}
-                                    {{ form.password(class="form-control", placeholder="Password") }}
-                                    {% for error in form.password.errors %}
-                                    <span class="text-danger">{{ error }}</span>
-                                    {% endfor %}
-                                </div>
+                             
                                 <div class="form-group form-check">
                                     {{ form.agree_terms(class="form-check-input") }}
                                     <label class="form-check-label">{{ form.agree_terms.label }}</label>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Register</button>
                             </form>
-                            <div class="mt-3">
-                                <p>Already have an account? <a href="#">Sign in</a></p>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
