--- a/templates/compaigndashboard.html
+++ b/templates/compaigndashboard.html
@@ -1,7 +1,7 @@
 <!-- dashboard.html -->
 {% extends "compaignbase.html" %}
 {% block title %}
-    Admin Dashboard
+    Mailing Solution
 {% endblock %}
 
 
