--- a/templates/compaignbase.html
+++ b/templates/compaignbase.html
@@ -29,16 +29,23 @@
 </head>
 
 <body class="sidebar-hide">
+    
     <div class="content-wrap">
         <div class="main">
             <div class="container-fluid">
                 <div>
                     {% if compains %}
-                    {% for compain in compains %}
-                    <a href="{{ url_for('compaigns.dashboard', compaign=compain.id) }}" class="btn btn-success">{{ compain.name }}</a>
-                    {% endfor %}
-                   
-                    {% endif %}
+    {% for compain in compains %}
+        {% if compain.id == active_compaign_id %}
+            <a href="{{ url_for('compaigns.dashboard', compaign=compain.id) }}" class="btn btn-primary">{{ compain.name }}</a>
+        {% else %}
+            <a href="{{ url_for('compaigns.dashboard', compaign=compain.id) }}" class="btn btn-success">{{ compain.name }}</a>
+        {% endif %}
+    {% endfor %}
+{% endif %}
+
+                
+
                   
                 </div>
                 <div> {% with messages = get_flashed_messages(with_categories=true) %}
@@ -102,7 +109,7 @@
                             <h4 class="modal-title">Create email Template</h4>
                         </div>
                         <div class="modal-body">
-                            <form action="{{ url_for('users.dashboard') }}" method="POST">
+                            <form action="{{ url_for('compaigns.dashboard', compaign = compaign_id) }}" method="POST">
                                 {{ formu.hidden_tag() }} <!-- Add CSRF token field for security -->
                                 <div class="form-group">
                                     {{ formu.Header.label(class="col-lg-2 control-label") }}
@@ -153,7 +160,7 @@
                             <h4 class="modal-title">Open Ai Key</h4>
                         </div>
                         <div class="modal-body">
-                            <form action="{{ url_for('users.config') }}" method="POST">
+                            <form action="{{ url_for('compaigns.config', id=compaign_id) }}" method="POST">
                                 {{ keyform.hidden_tag() }} <!-- Add CSRF token field for security -->
                                 <div class="form-group">
                                     {{ keyform.key.label(class="col-lg-2 control-label") }}
@@ -175,6 +182,46 @@
                 <!-- /.modal-dialog -->
             </div>
             <!-- config modal -->
+            <!-- start Customize -->
+            <div aria-hidden="true" role="dialog" tabindex="-1" id="customize" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content text-left">
+                        <div class="modal-header">
+                            <button aria-hidden="true" data-dismiss="modal" class="close" type="button"><i class="ti-close"></i></button>
+                            <h4 class="modal-title">Customize Login Page</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form action="{{ url_for('compaigns.customize', campaign=compaign_id) }}"  method="POST">
+                                {{ customizeform.hidden_tag() }} <!-- Add CSRF token field for security -->
+                                <div class="form-group">
+                                    {{ customizeform.title.label(class="col-lg-2 control-label") }}
+                                    <div class="col-lg-10">
+                                        {{ customizeform.title(class="form-control", placeholder="") }}
+                                        {% for error in customizeform.title.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    {{ customizeform.color.label(class="col-lg-2 control-label") }}
+                                    <div class="col-lg-10">
+                                        {{ customizeform.color(class="form-control", placeholder="") }}
+                                        {% for error in customizeform.color.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                               
+                                <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Submit</button>
+                            </form>
+                        </div>
+                        
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>
+            <!-- end Customize -->
             <!-- add Compaign -->
             <div aria-hidden="true" role="dialog" tabindex="-1" id="compaignmodal" class="modal fade">
                 <div class="modal-dialog">
@@ -210,7 +257,7 @@
         </div>
         <ul class="inbox-nav inbox-divider">
             <li class="active">
-                <a href="{{ url_for('users.dashboard')}}"><i class="fa fa-inbox"></i> Templates Created <span class="badge badge-success pull-right m-t-12">
+                <a href="{{ url_for('compaigns.dashboard', compaign=compaign_id) }}"><i class="fa fa-inbox"></i> Templates Created <span class="badge badge-success pull-right m-t-12">
 
                     {% set num_templates = email_templates|length %}
                     {% if num_templates > 0 %}
@@ -235,7 +282,7 @@
                 </a>
             </li>
             <li>
-                {% if current_user.openai_key == None  %}
+                {% if check_key == None  %}
                 <!-- <a  style="width: auto;height: auto;"> Config</a> -->
                 
                 <a href="#configmodal"  data-toggle="modal" title="Compose"><i class="fa fa-wrench"></i>
@@ -243,6 +290,10 @@
                 {% else %}
                 <a href="#configmodal"  data-toggle="modal" title="Compose" ><i class="fa fa-edit"></i> Update</a>
                 {% endif %}
+            </li>
+            <li>
+                <a href="#customize"  data-toggle="modal" title="Compose"> <i class="fa fa-cog"></i>
+                    Customize</a>
             </li>
            
           
@@ -311,6 +362,9 @@
     <script src="/static/js/lib/jquery.nicescroll.min.js"></script>
     <script src="/static/js/lib/menubar/sidebar.js"></script>
     <script src="/static/js/lib/preloader/pace.min.js"></script>
+    <script>
+        
+</script>
     <script src="/static/js/lib/bootstrap.min.js"></script>
     <script src="/static/js/scripts.js"></script>
     <!-- Additional JS specific to the child template -->
