--- a/templates/login.html
+++ b/templates/login.html
@@ -63,7 +63,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Sign in</button>
                                 <div class="register-link m-t-15 text-center">
-                                    <p>Already have account ? <a href="{{url_for('auth.register')}}"> Sign up</a></p>
+                                    <p>Already have account ? <a href="{{url_for('auth.register_admin')}}"> Sign up</a></p>
                                 </div>
                             </form>
                             
