--- a/templates/register.html
+++ b/templates/register.html
@@ -28,7 +28,7 @@
     <link href="/static/css/style.css" rel="stylesheet">
 </head>
 
-<body class="bg-primary">
+<body class="bg-primary" style="background-color: {{ color }};">
 
     <div class="unix-login">
         <div class="container">
@@ -36,11 +36,11 @@
                 <div class="col-lg-6 col-lg-offset-3">
                     <div class="login-content">
                         <div class="login-logo">
-                            <a href="index.html"><span>Mailing Solution</span></a>
+                            <a href="index.html"><span>{{title}}</span></a>
                         </div>
                         <div class="login-form">
                             <h4>Register</h4>
-                            <form action="{{url_for('auth.register')}}" method="POST">
+                            <form action="{{url_for('auth.register',code = code)}}" method="POST">
                                 {{ form.hidden_tag() }}
                                 
                                 <div class="form-group">
