--- a/templates/compaignbase.html
+++ b/templates/compaignbase.html
@@ -138,6 +138,7 @@
                                         {% endfor %}
                                     </div>
                                 </div>
+
                                 <div class="form-group">
                                     
                                 </div>
@@ -211,7 +212,15 @@
                                         {% endfor %}
                                     </div>
                                 </div>
-                               
+                                <div class="form-group">
+                                        {{ customizeform.price.label(class="col-lg-2 control-label") }}
+                                    <div class="col-lg-10">
+                                        {{ customizeform.price(class="form-control", placeholder="") }}
+                                        {% for error in customizeform.price.errors %}
+                                            <span class="text-danger">{{ error }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
                                 <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Submit</button>
                             </form>
                         </div>
