--- a/templates/compaigndashboard.html
+++ b/templates/compaigndashboard.html
@@ -12,9 +12,11 @@
                                             {% block content %}
                                             <aside class="lg-side">
                                                 <div class="inbox-head">
-                                                   
+                                                    <a href="http://127.0.0.1:5000/auth/register/{{url}}">http://127.0.0.1:5000/auth/register/{{url}} </a>
                                                     <form action="#" class="pull-right position">
+                                                        
                                                         <div class="input-append inner-append">
+                                                           
                                                             <input type="text" class="sr-input" placeholder="Search Mail">
                                                             <button class="btn sr-btn append-btn" type="button"><i class="fa fa-search"></i></button>
                                                         </div>
