--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Your Title Here{% endblock %}</title>
+    <title>{% block title %}Mailing Admin{% endblock %}</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
