--- a/templates/compaignusers.html
+++ b/templates/compaignusers.html
@@ -12,7 +12,7 @@
                                             {% block content %}
                                             <aside class="lg-side">
                                                 <div class="inbox-head">
-                                                   
+                                                    <a href="http://127.0.0.1:5000/auth/register/{{url}}">http://127.0.0.1:5000/auth/register/{{url}} </a>
                                                     <form action="#" class="pull-right position">
                                                         <div class="input-append inner-append">
                                                             <input type="text" class="sr-input" placeholder="Search Mail">
