--- a/templates/success.html
+++ b/templates/success.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Webstrot Admin : Widget</title>
+    <title>Mailing Admin</title>
 
     <!-- ================= Favicon ================== -->
     <!-- Standard -->
@@ -42,6 +42,7 @@
     font-size: 50px; /* adjust icon size as needed */
     color: #5cb85c; /* green color */
 }
+
 
     </style>
 </head>
