--- a/templates/404.html
+++ b/templates/404.html
@@ -26,6 +26,36 @@
     <link href="/static/css/lib/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/lib/unix.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
+    <style>
+        .success-icon {
+    border: 2px solid #5cb85c; /* green color */
+    border-radius: 50%; /* make it round */
+    width: 100px; /* adjust width and height as needed */
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto; /* adjust margin as needed */
+}
+.error-icon{
+    border: 2px solid red; 
+    border-radius: 50%; /* make it round */
+    width: 100px; /* adjust width and height as needed */
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto; /* adjust margin as needed */
+}
+.success-icon i {
+    font-size: 50px; /* adjust icon size as needed */
+    color: #5cb85c; /* green color */
+}
+.error-icon i{
+    font-size: 50px; /* adjust icon size as needed */
+    color: red;
+}
+    </style>
 </head>
 
 <body class="bg-primary">
@@ -39,41 +69,18 @@
                             <a href="index.html"><span>Mailing Solution</span></a>
                         </div>
                         <div class="login-form">
-                            <h4>Login</h4>
-                            <form method="POST" action="{{ url_for('auth.login') }}">
-                                {{ form.hidden_tag() }}
-                                <div class="form-group">
-                                    {{ form.email.label }}
-                                    {{ form.email(class="form-control", placeholder="Email") }}
-                                    {% for error in form.email.errors %}
-                                        <span style="color: red;">{{ error }}</span>
-                                    {% endfor %}
-                                </div>
-                                <div class="form-group">
-                                    {{ form.password.label }}
-                                    {{ form.password(class="form-control", placeholder="Password") }}
-                                    {% for error in form.password.errors %}
-                                        <span style="color: red;">{{ error }}</span>
-                                    {% endfor %}
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        {{ form.remember(class="checkbox") }} Remember Me
-                                    </label>
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Sign in</button>
-                                <div class="register-link m-t-15 text-center">
-                                    <p>Already have account ? <a href="{{url_for('auth.register_admin')}}"> Sign up</a></p>
-                                </div>
-                            </form>
-                            
+                            <h4>404 Error!</h4>
+                            <div class="error-icon" >
+                                <i class="fa fa-exclamation-triangle"></i>
+                            </div>
+                            <h4>{{message}}</h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    
 </body>
 
 </html>
